--- a/pages/content/content.html
+++ b/pages/content/content.html
@@ -3,21 +3,21 @@
     <div class="row">
 
         <div class="col">
-            <img src="/img/prod1.jpg" alt="">
+            <img src="../img/prod1.jpg" alt="">
             <p class="abc">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit veritatis nihil, quae alias quod sed, perspiciatis.
             </p>
         </div>
 
         <div class="col">
-            <img src="/img/prod2.jpg" alt="">
+            <img src="../img/prod2.jpg" alt="">
             <p class="abc">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit veritatis nihil, quae alias quod sed, perspiciatis.
             </p>
         </div>
 
         <div class="col">
-            <img src="/img/prod3.jpg" alt="">
+            <img src="../img/prod3.jpg" alt="">
             <p class="abc">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit veritatis nihil, quae alias quod sed, perspiciatis.
             </p>
@@ -28,21 +28,21 @@
     <div class="row">
 
         <div class="col">
-            <img src="/img/prod1.jpg" alt="">
+            <img src="../img/prod1.jpg" alt="">
             <p class="abc">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit veritatis nihil, quae alias quod sed, perspiciatis.
             </p>
         </div>
 
         <div class="col">
-            <img src="/img/prod2.jpg" alt="">
+            <img src="../img/prod2.jpg" alt="">
             <p class="abc">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit veritatis nihil, quae alias quod sed, perspiciatis.
             </p>
         </div>
 
         <div class="col">
-            <img src="/img/prod3.jpg" alt="">
+            <img src="../img/prod3.jpg" alt="">
             <p class="abc">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit veritatis nihil, quae alias quod sed, perspiciatis.
             </p>
