--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -1,7 +1,7 @@
 <section class="home">
     <div class="row">
         <div class="column">
-            <img src="/img/hero2.jpg" alt="">
+            <img src="../img/hero2.jpg" alt="">
         </div>
         <div class="column">
             <h1 class="center">welcome</h1>
