--- a/pages/specials/specials.html
+++ b/pages/specials/specials.html
@@ -3,7 +3,7 @@
 
     <div class="row">
         <div class="col">
-            <img src="/img/one.jpg" alt="">
+            <img src="../img/one.jpg" alt="">
             <div class="txt">
                 <h3>one</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, saepe. Dolor quo blanditiis facilis tempore nobis. Aliquam cupiditate quae quibusdam nobis reiciendis amet quidem eveniet commodi placeat. Non, quibusdam in.</p>
@@ -18,7 +18,7 @@
 
     <div class="row">
         <div class="col">
-            <img src="/img/two.jpg" alt="">
+            <img src="../img/two.jpg" alt="">
             <div class="txt">
                 <h3>two</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut beatae neque dolorem quos, nemo exercitationem cumque, commodi laborum suscipit animi fugit expedita! Rem aliquam quasi delectus magni expedita libero voluptate.</p>
