--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -1,7 +1,7 @@
 <section class="about">
     <div class="row">
         <div class="column">
-            <img src="/img/homehero.jpg" alt="">
+            <img src="../img/homehero.jpg" alt="">
             <div class="info">
                 <h1>about</h1>
             <p>
