--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -1,5 +1,5 @@
 <section class="contact">
-    <img src="/img/contactpic2.jpg" alt="">
+    <img src="img/contactpic2.jpg" alt="">
     <h1>contact</h1>
     <div class="imgboxes1">
         <div class="text">
